Prevent floating footer on mobile.

--- a/extension/src/components/App/App.module.css
+++ b/extension/src/components/App/App.module.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-height: max(100vh, 100%);
+  min-height: 100vh;
 }
 
 .app__main {
