--- a/extension/src/context/Theme/Theme.css
+++ b/extension/src/context/Theme/Theme.css
@@ -9,7 +9,7 @@ body {
 
 #root,
 .container {
-  min-height: max(100vh, 100%);
+  min-height: 100vh;
 }
 
 .container {
